Fix uneven input prompt width

--- a/notebook/static/notebook/less/codecell.less
+++ b/notebook/static/notebook/less/codecell.less
@@ -47,7 +47,7 @@ div.run_this_cell {
 }
 
 div.code_cell div.input_prompt {
-    min-width: 11ex;
+    min-width: 15ex;
 }
 
 @media (-moz-touch-enabled: 1), (any-pointer: coarse) {
